[package]
name = "perf_client"
version = "0.1.0"
authors = ["Ryo Ohki <roki.swindler@gmail.com>"]
build = "build.rs"

[dependencies]
widestring = "0.2.2"
serde = "0.8"
serde_json = "0.8"
toml = "0.2"
rustc-serialize = "0.3"

[dependencies.winapi]
path = "../winapi-rs"
features = ["winerror", "pdh", "handleapi"]

